# grimoirelab-perceval-zulip

./: .coveragerc  NEWS  README.md  pyproject.toml
.github/workflows/: changelog.yml  release.yml  tests.yml
perceval/: _version.py
perceval/backends/zulip/: __init__.py  _version.py  zulip.py
releases/: 0.1.0.md  0.1.1.md  0.2.0.md  0.2.1.md  0.3.0.md  0.4.0.md
releases/unreleased/: add-zulip-backend.yml  bump-dependencies.yml  change-`email`-to-zulip-argument-group.yml  drop-python-37-support.yml  drop-python-<-3.7-support.yml  increased-minimum-version-for-python-to-310.yml  support-package-namespaces-with-poetry.yml
tests/: __init__.py  base.py  run_tests.py  test_zulip.py
