[tool.poetry]
name = "perceval-zulip"
version = "0.3.0"
description = "Perceval backend for Zulip."
authors = [
    "GrimoireLab Developers"
]
license = "GPL-3.0+"

readme = "README.md"

homepage = "https://chaoss.github.io/grimoirelab/"
repository = "https://github.com/vchrombie/grimoirelab-perceval-zulip"

keywords = [
    "development",
    "grimoirelab"
]

packages = [
    { include = "perceval" },
    { include = "tests", format = "sdist" },
]

include = [
    { path = "AUTHORS", format = "sdist" },
    { path = "NEWS", format = "sdist" },
    { path = "README.md", format = "sdist" },
]

classifiers = [
   "Development Status :: 4 - Beta",
   "Intended Audience :: Developers",
   "Intended Audience :: Science/Research",
   "Topic :: Software Development",
   "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
   "Programming Language :: Python :: 3"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/vchrombie/grimoirelab-perceval-zulip/issues"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.7"
grimoirelab-toolkit = { version = ">=0.3", allow-prereleases = true}
perceval = { version = ">=0.19", allow-prereleases = true }

[tool.poetry.dev-dependencies]
httpretty = "^1.1.4"
flake8 = "^7.1.1"
coverage = "^7.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
